# mlguard

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
action/: action.yml
docs/: case-study.md  example-report.md  verification.md
examples/: sklearn_example.py
examples/.github/workflows/: ml-deploy.yml
mlguard/: __init__.py  baseline.py  cli.py  drift.py  latency.py  regression.py  report.py  verdict.py
scripts/: verify-local.sh
tests/: test_action_metadata.py  test_cli.py  test_drift.py  test_regression.py  test_report.py  test_verdict.py
