[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlguard"
version = "0.1.0"
description = "Pre-deployment checks for ML models. Catches data drift, performance regression, and latency issues before they reach production."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kethan Goparapu", email = "ketgop2@gmail.com"},
]
keywords = ["mlops", "model-monitoring", "drift-detection", "ci-cd", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
torch = [
    "torch>=2.0.0",
]

[project.scripts]
mlguard = "mlguard.cli:app"

[tool.setuptools.packages.find]
include = ["mlguard*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
